@@ -428,7 +428,7 @@ $_LANG['Enable Warnings'] = 'Włącz ostrzeżenia';
 $_LANG['Enable Warnings for All'] = 'Włącz ostrzeżenia wszystkim';
 $_LANG['End:'] = 'Koniec:';
 $_LANG['End of DHCP range:'] = 'Koniec zakresu DHCP :';
-$_LANG['End of DHCP range has to be greater than start!'] = 'Koniec zakresu DHCP musi być większy niż jego początek!';
+$_LANG['End of DHCP range has to be equal or greater than start!'] = 'Koniec zakresu DHCP musi być równy lub większy niż jego początek!';
 $_LANG['End time must not precede start time!'] = 'Czas zakończenia musi być późniejszy niż czas rozpoczęcia!';
 $_LANG['Enter 4 to 6 digits PIN number (optional)'] = 'Wprowadź 4 do 6-u cyfr numeru PIN (opcjonalnie)';
 $_LANG['Enter account limits (optional)'] = 'Wprowadź limity dla konta (opcjonalnie)';
@@ -741,8 +741,8 @@ $_LANG['IP Address:'] = 'Adres IP:';
 $_LANG['IP Address Classes Management'] = 'Zarządzanie klasami adresowymi IP';
 $_LANG['IP addresses instead of nodes names'] = 'Adresy IP zamiast nazw komputerów';
 $_LANG['IP addresses status:'] = 'Wykorzystanie adresów IP:';
-$_LANG['IP address for DHCP range end does not match with network address!'] = 'Adresy IP dla końca zakresu DHCP nie pokrywa się z adresem sieci!';
-$_LANG['IP address for DHCP range start does not match with network address!'] = 'Adresy IP dla początku zakresu DHCP nie pokrywają się z adresami sieci!';
+$_LANG['IP address for DHCP range end does not match with network address!'] = 'Adres IP dla końca zakresu DHCP nie pokrywa się z adresem sieci!';
+$_LANG['IP address for DHCP range start does not match with network address!'] = 'Adres IP dla początku zakresu DHCP nie pokrywają się z adresami sieci!';
 $_LANG['IP address is in use!'] = 'Adres IP jest już zajęty!';
 $_LANG['IP address is required!'] = 'Adres IP jest wymagany!';
 $_LANG['IP Networks'] = 'Sieci IP';
